--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/index.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/index.html
@@ -639,6 +639,70 @@
         </div>
     </section>
 
+    <section class="section" id="advantages">
+        <div class="section-container">
+            <div class="section-header">
+                <div class="section-label">Advantages</div>
+                <h2 class="section-title">他のツールにはない強み</h2>
+                <p class="section-description">
+                    Google Workspace Studioならではの価値
+                </p>
+            </div>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="feature-icon">N</div>
+                    <h3 class="feature-title">ノーコードで完結</h3>
+                    <p class="feature-description">
+                        プログラミング不要で高度な自動化を実現。スターターとステップを組み合わせるだけで営業フローを構築できます。
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">K</div>
+                    <h3 class="feature-title">APIキー管理不要</h3>
+                    <p class="feature-description">
+                        外部サービスのAPIキー取得・管理が不要。Gemini、Gmail、Drive、Chatすべてシームレスに連携します。
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">S</div>
+                    <h3 class="feature-title">Workspace内で完結</h3>
+                    <p class="feature-description">
+                        データが外部に出ることなく、Google Workspace内で安全に処理。企業のセキュリティポリシーにも対応しやすい構成です。
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">G</div>
+                    <h3 class="feature-title">Gemini標準搭載</h3>
+                    <p class="feature-description">
+                        追加料金なしでGeminiをフル活用。メール要約、分類、返信ドラフト作成などAI機能を自由に組み込めます。
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">R</div>
+                    <h3 class="feature-title">リアルタイム連携</h3>
+                    <p class="feature-description">
+                        Gmail、Drive、Sheets、Chatとネイティブ連携。スケジュール実行もメール受信時のリアルタイム実行も可能です。
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">E</div>
+                    <h3 class="feature-title">拡張性も確保</h3>
+                    <p class="feature-description">
+                        標準ステップで足りない場合は、Apps Scriptでカスタムステップを作成可能。ノーコードの利便性と拡張性を両立します。
+                    </p>
+                </div>
+            </div>
+            <div style="margin-top: 2rem; padding: 1.5rem; background: var(--bg-secondary); border-radius: var(--radius-md); border-left: 4px solid var(--accent-primary);">
+                <h4 style="margin-bottom: 0.5rem; color: var(--accent-primary);">カスタムステップについて</h4>
+                <p style="font-size: 0.9375rem; color: var(--text-secondary); margin-bottom: 0.5rem;">
+                    標準ステップでは対応できない処理が必要な場合、Apps Scriptでカスタムステップを作成できます。
+                    ただし、Workspace Studioはノーコードツールとしての価値が高いため、まずは標準ステップでの実装を推奨します。
+                </p>
+                <a href="https://developers.google.com/workspace/add-ons/studio/quickstart-calculator?hl=ja" target="_blank" style="font-size: 0.875rem; color: var(--accent-primary);">カスタムステップのドキュメント &rarr;</a>
+            </div>
+        </div>
+    </section>
+
     <section class="section" id="curriculum">
         <div class="section-container">
             <div class="section-header">
@@ -666,7 +730,7 @@
                     <div class="curriculum-content">
                         <h3 class="curriculum-title">見込み顧客メールを10分で把握</h3>
                         <p class="curriculum-description">
-                            要約・重要顧客優先・緊急案件アラートの自動化。毎朝、見込み顧客メールをGeminiが自動要約し、重要顧客を優先表示、緊急案件はChatでアラート通知します。
+                            要約・重要顧客優先・緊急案件アラートの自動化。スケジュールスターターで毎朝起動、Geminiステップで自動要約、重要顧客を優先表示、緊急案件はChat DMでアラート通知します。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -678,7 +742,7 @@
                     <div class="curriculum-content">
                         <h3 class="curriculum-title">追客漏れゼロの受信トレイ</h3>
                         <p class="curriculum-description">
-                            要対応案件メールの自動ラベル化・次アクション設計。メール受信時に要対応を自動判定し、ラベル付与、Geminiが次のアクションを提案します。
+                            要対応案件メールの自動ラベル化・次アクション設計。Gmailスターターでメール受信時に起動、Geminiステップで要対応を判定、条件分岐でラベル付与、Chat DMで次アクションを通知します。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -690,7 +754,7 @@
                     <div class="curriculum-content">
                         <h3 class="curriculum-title">提案資料と見積書を完全自動整理</h3>
                         <p class="curriculum-description">
-                            Drive保存・定期送信フローで営業資料を整流化。添付ファイルを案件フォルダに自動保存、週次で資料一覧レポートを自動送信します。
+                            Drive保存・定期送信フローで営業資料を整流化。Gmailスターターで添付ファイル受信時に起動、Geminiステップで分類、Driveステップで案件フォルダに自動保存します。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -702,7 +766,7 @@
                     <div class="curriculum-content">
                         <h3 class="curriculum-title">キーワード監視で確度高い案件を逃さない</h3>
                         <p class="curriculum-description">
-                            使える営業フローに仕上げる最終調整。営業キーワードを監視して確度高い案件を優先アラート、複数エージェントを統合して運用します。
+                            使える営業フローに仕上げる最終調整。Gmailスターターでキーワード監視、Geminiステップで確度判定、条件分岐で高確度案件をChat DMで優先アラートします。
                         </p>
                     </div>
                     <svg class="curriculum-arrow" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
