--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson5.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson5.html
@@ -874,20 +874,20 @@
         <div class="flow-diagram">
             <h3>エージェントフロー</h3>
             <div class="flow-steps">
-                <div class="flow-step">メール受信</div>
+                <div class="flow-step">Gmailスターター<br><small>キーワードフィルター</small></div>
                 <span class="flow-arrow">→</span>
-                <div class="flow-step">キーワード検出</div>
+                <div class="flow-step">Geminiステップ<br><small>確度判定</small></div>
                 <span class="flow-arrow">→</span>
-                <div class="flow-step">Gemini確度判定</div>
+                <div class="flow-step">条件分岐<br><small>HIGH判定</small></div>
                 <span class="flow-arrow">→</span>
-                <div class="flow-step">優先アラート</div>
+                <div class="flow-step">Chat DMステップ<br><small>優先アラート</small></div>
             </div>
         </div>
 
         <div class="step-card">
             <div class="step-header">
                 <div class="step-number">1</div>
-                <h3 class="step-title">スターター設定（Gmail - Email received）</h3>
+                <h3 class="step-title">Gmailスターター設定（Gmail - Email received）</h3>
             </div>
             <p>重要顧客からキーワードを含むメールを受信したときに起動します。</p>
             <div class="code-block">from:(@重要顧客) (契約 OR 発注 OR 注文 OR 見積 OR 提案 OR 検討)</div>
@@ -900,9 +900,9 @@
         <div class="step-card">
             <div class="step-header">
                 <div class="step-number">2</div>
-                <h3 class="step-title">Geminiで確度判定</h3>
+                <h3 class="step-title">Geminiステップ（確度判定）</h3>
             </div>
-            <p>Geminiにメール内容を分析させ、案件の確度を判定します。</p>
+            <p>Geminiステップでメール内容を分析させ、案件の確度を判定します。</p>
             <div class="code-block">Analyze this sales email for deal probability:
 
 {email_content}
@@ -922,7 +922,7 @@ Provide analysis in Japanese:
         <div class="step-card">
             <div class="step-header">
                 <div class="step-number">3</div>
-                <h3 class="step-title">条件分岐（確度HIGH判定）</h3>
+                <h3 class="step-title">条件分岐ステップ（確度HIGH判定）</h3>
             </div>
             <p>確度がHIGHの場合のみ、即座にアラートを送信します。</p>
             <div class="code-block">{probability_analysis} contains "HIGH"</div>
@@ -931,9 +931,9 @@ Provide analysis in Japanese:
         <div class="step-card">
             <div class="step-header">
                 <div class="step-number">4</div>
-                <h3 class="step-title">優先アラート送信（確度HIGHの場合）</h3>
+                <h3 class="step-title">Chat DMステップ（優先アラート）</h3>
             </div>
-            <p>Trueブランチで優先アラートを個人DMで送信します。</p>
+            <p>Trueブランチで優先アラートをChat DMで送信します。</p>
             <div class="code-block">🔥 高確度案件を検知しました！
 
 【送信者】{sender_name} ({sender_email})
@@ -945,15 +945,15 @@ Provide analysis in Japanese:
 ⚡ 今すぐ対応してください！
 📧 メールを確認: {email_link}</div>
             <div class="warning-box">
-                <h4>Chat通知について</h4>
-                <p>Google Chat通知は個人へのDM（ダイレクトメッセージ）のみ利用可能です。スペースへの投稿機能は現在提供されていません。</p>
+                <h4>Chat通知についての重要な変更</h4>
+                <p>正式リリースでは<strong>Chatスペースへの投稿機能は削除</strong>されました。Chat通知は<strong>個人へのDM（ダイレクトメッセージ）のみ</strong>利用可能です。チーム共有が必要な場合は、Gmailでのメール送信を検討してください。</p>
             </div>
         </div>
 
         <div class="step-card">
             <div class="step-header">
                 <div class="step-number">5</div>
-                <h3 class="step-title">ラベル付与</h3>
+                <h3 class="step-title">Gmailステップ（ラベル付与）</h3>
             </div>
             <p>確度に応じたラベルを自動付与します。</p>
             <table class="filter-table">
@@ -1030,7 +1030,7 @@ Provide analysis in Japanese:
             <thead>
                 <tr>
                     <th>エージェント</th>
-                    <th>トリガー</th>
+                    <th>スターター</th>
                     <th>フィルター</th>
                     <th>起動条件</th>
                 </tr>
@@ -1038,25 +1038,25 @@ Provide analysis in Japanese:
             <tbody>
                 <tr>
                     <td>メール要約</td>
-                    <td>Scheduled 9AM</td>
+                    <td>スケジュールスターター 9AM</td>
                     <td>is:unread</td>
                     <td>全ての未読メール</td>
                 </tr>
                 <tr>
                     <td>追客漏れゼロ</td>
-                    <td>Email received</td>
+                    <td>Gmailスターター</td>
                     <td>from:(@重要顧客)</td>
                     <td>重要顧客からの全メール</td>
                 </tr>
                 <tr>
                     <td>資料自動整理</td>
-                    <td>Email received</td>
+                    <td>Gmailスターター</td>
                     <td>has:attachment</td>
                     <td>添付ファイル付きのみ</td>
                 </tr>
                 <tr>
                     <td>確度高案件監視</td>
-                    <td>Email received</td>
+                    <td>Gmailスターター</td>
                     <td>キーワード含む</td>
                     <td>特定キーワードを含む</td>
                 </tr>
@@ -1212,23 +1212,23 @@ Provide analysis in Japanese:
         <div class="agent-summary-grid">
             <div class="agent-summary-card">
                 <h4><span class="agent-badge">第2回</span> 見込み顧客メール要約</h4>
-                <p>毎朝9時に未読メールを要約してDM通知</p>
+                <p>スケジュールスターター → Gmailステップ → Geminiステップ → Chat DMステップで通知</p>
             </div>
             <div class="agent-summary-card">
                 <h4><span class="agent-badge">第3回</span> 追客漏れゼロ</h4>
-                <p>要対応判定＋ラベル付与＋次アクション通知</p>
+                <p>Gmailスターター → Geminiステップ → 条件分岐 → ラベル付与 → Chat DMステップで通知</p>
             </div>
             <div class="agent-summary-card">
                 <h4><span class="agent-badge">第4回</span> 営業資料自動整理</h4>
-                <p>添付ファイルを分類してDrive保存</p>
+                <p>Gmailスターター → Geminiステップで分類 → Driveステップで保存</p>
             </div>
             <div class="agent-summary-card">
                 <h4><span class="agent-badge">第4回</span> 営業資料週次レポート</h4>
-                <p>毎週月曜に資料一覧をレポート送信</p>
+                <p>スケジュールスターター → Driveステップ → Geminiステップ → Chat DMステップで送信</p>
             </div>
             <div class="agent-summary-card">
                 <h4><span class="agent-badge">第5回</span> 確度高案件監視</h4>
-                <p>キーワード検出＋確度判定＋優先アラート</p>
+                <p>Gmailスターター → Geminiステップで確度判定 → 条件分岐 → Chat DMステップで優先アラート</p>
             </div>
         </div>
     </section>
